# R-Q-Evolve

./: .gitignore  README.md  pyproject.toml  requirements.txt  rq_output
configs/: rq_evolve_4b_base.yaml  rq_evolve_base copy.yaml  rq_evolve_base.yaml  rq_evolve_grpo_h_g8_fix.yaml  rq_evolve_grpo_h_g8_fix_crossover.yaml  rq_evolve_grpo_h_g8_fix_random.yaml  rq_evolve_octo_3b.yaml  rq_evolve_octo_8b.yaml  verl_grpo_h_g8_fix.yaml  verl_ppo_rq.yaml
docs/: PIPELINE.md
prompt_templates/: README.md  crossover.txt  in_breadth.txt  in_depth.txt
prompt_templates/shots/: crossover.txt  evaluator.txt  in_breadth.txt  in_depth.txt
scripts/: eval_vllm_math.py  merge_fsdp_to_hf.py  run_train_grpo_h_g8_fix.sh  run_train_grpo_h_g8_fix_crossover.sh  run_train_grpo_h_g8_fix_random.sh  run_train_rq_evolve_base.sh  run_train_rq_evolve_base_4b.sh  train_with_verl.py
src/rq_evolve/: __init__.py  _sandbox_worker.py  archive.py  backends.py  code_utils.py  concepts.py  config.py  dataset.py  eval_trainer.py  evolution.py  math_eval.py  program.py  prompts.py  reward.py  scoring.py  verl_adapter.py  verl_backend.py  verl_patches.py
tests/: test_archive.py  test_dataset.py  test_program.py  test_prompts.py  test_scoring.py
