[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r-q-evolve"
version = "0.1.0"
description = "Educational abstraction of an R_Q-based evolutionary question generation pipeline."
requires-python = ">=3.10"
dependencies = [
  "omegaconf>=2.3.0",
  "sympy>=1.12",
  "numpy>=1.24",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
train = [
  "verl",
  "ray",
  "torch",
  "transformers",
  "torchdata",
  "vllm",
  "wandb",
]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

