[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r-q-evolve"
version = "0.1.0"
description = "Educational abstraction of an R_Q-based evolutionary question generation pipeline."
requires-python = ">=3.10"
dependencies = [
  "omegaconf>=2.3.0",
  "sympy>=1.12",
  "numpy>=1.24",
  "python-dotenv>=1.0",
  # Answer grading (reward.answers_match) uses math_verify exclusively; it pulls
  # in latex2sympy2_extended, listed explicitly to pin the LaTeX backend.
  "math-verify>=0.7.0",
  "latex2sympy2_extended>=1.10.0",
]

[project.optional-dependencies]
train = [
  "verl",
  "ray",
  "torch",
  "transformers",
  "torchdata",
  "vllm",
  "wandb",
]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

